display image overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -339,6 +339,15 @@ h1 {
   border-radius: 12px;
 }
 
+.Recommend-img{
+  width: 100%;
+  height: 100%;
+}
+
+.Recommend-img:not([src]), .Recommend-img[src=""] {
+  display: none;
+}
+
 #Login-body {
   background-image: linear-gradient(#1ED760, black);
   height: 100vh;
